# twitter-backend

./: .env.example  Cargo.toml  README.md  docker-compose.yml  requests.http
docker/dev/: Dockerfile
migrations/: 01_create_users.sql  02_create_tweets.sql  03_create_following.sql
src/: following.rs  main.rs  routes.rs  tweet.rs  user.rs
src/handlers/: following.rs  mod.rs  tweets.rs  users.rs
