[package]
name = "twitter-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "uuid",
    "time",
] }
time = { version = "0.3.47", features = ["serde"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
